--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,1 @@
-appdirs==1.4.4
-asgiref==3.3.4
-bidict==0.21.2
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==7.1.2
-distlib==0.3.1
-Django==3.2
-dnspython==1.16.0
-eventlet==0.30.1
-filelock==3.0.12
-Flask==1.1.2
-Flask-SocketIO==5.0.1
-greenlet==1.0.0
-idna==3.3
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-python-dotenv==0.15.0
-python-engineio==4.0.0
-python-socketio==5.0.4
-pytz==2021.1
-requests==2.26.0
-six==1.15.0
-sqlparse==0.4.1
-urllib3==1.26.7
-virtualenv==20.4.3
-vk-api==11.9.6
-Werkzeug==1.0.1
+Pillow==9.3.0
